# actix-test

./: .env  .gitignore  Cargo.toml  application.yaml  log.yaml
src/: lib.rs  main.rs
src/config/: app_config.rs  application.rs  database.rs  db.rs  log.rs  mod.rs  router.rs
src/middleware/: auth.rs  mod.rs
src/model/: mod.rs  user.rs
src/service/: auth.rs  user.rs
src/util/: error.rs  utils.rs
