[package]
name = "actix-web-test"
version = "0.1.0"
authors = ["FETE <starshine@aili.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 基本
futures = "0.3"
actix-web = "3"
actix-cors = "0.5"
actix-web-httpauth = "0.5"
async-std = { version = "1.8", features = ["attributes", "tokio02"] }

#序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

derive_more = { version = "0.99", features = ["display", "error", "from"] }
#日志
log = "0.4"
#env_logger = "0.8"
log4rs="1"
#读取环境变量文件
dotenv = "0.15"
#读取内网 ip
local_ipaddress = "0.1"
#JWT
jsonwebtoken = "7"
