[package]
name = "actix-test"
version = "0.1.0"
authors = ["FETE <starshine@aili.moe>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 基本
futures-util = "0.3"
actix-web = { version = "4.1", default-features = false, features = ["macros"] }
actix-cors = "0.6"
actix-web-httpauth = "0.8"
tokio = { version = "1", features = ["full"] }

#序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
derive_more = "0.99"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.14"

#日志
log = "0.4"
fast_log = {version = "1.5" , features = ["zip"]}

# rbatis
rbs = "0.1"
rbatis = "4"
rbdc-sqlite = "0.1"
rbdc-mysql = "0.1"

#读取内网 ip
local_ipaddress = "0.1"

#JWT
jsonwebtoken = "8"
serde_urlencoded = "0.7"
